<resources>
    <string name="app_name">AstronomyKu</string>
    <string name="app_tagline">Welcome to AstronomyKu, here you wiil find a lot of fun facts about our solar system</string>
    <string name="menu_planet">Planets Fun Facts</string>
    <string name="menu_apod">Astronomy Picture of the Day</string>
    <string name="menu_nasa">About NASA</string>
    <string name="menu_about">About AstronomyKu</string>
    <string name="tagline_about">Here is the the App Infromation</string>
    <string name="btn_see_apod">See APOD</string>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>
    <string name="nasa_location">See NASA HQ Location</string>
    <string name="nasa_p1">The National Aeronautics and Space Administration is America’s civil space program and the global leader in space exploration. The agency has a diverse workforce of just under 18,000 civil servants, and works with many more U.S. contractors, academia, and international and commercial partners to explore, discover, and expand knowledge for the benefit of humanity. With an annual budget of $23.2 billion in Fiscal Year 2021, which is less than 0.5% of the overall U.S. federal budget, NASA supports more than 312,000 jobs across the United States, generating more than $64.3 billion in total economic output (Fiscal Year 2019).</string>
    <string name="nasa_p2">At its 20 centers and facilities across the country – and the only National Laboratory in space – NASA studies Earth, including its climate, our Sun, and our solar system and beyond. We conduct research, testing, and development to advance aeronautics, including electric propulsion and supersonic flight. We develop and fund space technologies that will enable future exploration and benefit life on Earth.</string>
    <string name="nasa_p3">NASA also leads a Moon to Mars exploration approach, which includes working with U.S. industry, international partners, and academia to develop new technology, and send science research and soon humans to explore the Moon on Artemis missions that will help prepare for human exploration of the Red Planet. In addition to those major missions, the agency shares what it learns so that its information can make life better for people worldwide. For example, companies use NASA discoveries and technologies to create new products for the public. To ensure future success for the agency and the nation, NASA also supports education efforts in STEM with an emphasis on increasing diversity in our future workforce.</string>
    <string name="about">AstronomyKu is a mobile application that has a function to help users who want to know interesting facts about astronomy. In this application, users will be provided with various interesting information about planets, then APOD (Astronomy Picture of the Day), and information about NASA.</string>
    <string name="menu_language">Language</string>
    <string name="menu_notif">Set Notification</string>
</resources>