<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity"
    android:background="@drawable/bg_menu"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <LinearLayout
            android:id="@+id/profile"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/rounded_edge"
            android:backgroundTint="@color/blue"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <ImageView
                    android:layout_width="62dp"
                    android:layout_height="62dp"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/about" />

                <TextView
                    android:id="@+id/textDashboardMenu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/psemibold"
                    android:text="@string/menu_about"
                    android:textColor="@color/white"
                    android:textSize="22sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textDashboardMenu"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/preguler"
                    android:text="@string/tagline_about"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            >
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/rounded_edge"
                android:backgroundTint="@color/blue"
                android:layout_gravity="center"
                android:gravity="center"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:fontFamily="@font/preguler"
                    android:text="@string/about"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:padding="20dp"
                    android:textAlignment="center"
                    />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            >
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/rounded_edge"
                android:backgroundTint="@color/blue"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginBottom="30dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/psemibold"
                    android:text="MEET THE TEAM"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textAlignment="center"
                    />

                <ImageView
                    android:layout_marginTop="10dp"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/tyas"
                    />

                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:fontFamily="@font/preguler"
                    android:textSize="15sp"
                    android:text="SRI WAHYU ADININGTYAS"
                    />

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/eksam"
                    />

                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:fontFamily="@font/preguler"
                    android:textSize="15sp"
                    android:text="EKA SAMSIATI PUTRI"
                    />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</ScrollView>